[package]
name = "anychain-sui"
description = "A Rust library for Sui-focused cryptocurrency wallets, enabling seamless transactions on the Sui blockchain"
version = "0.1.8"
keywords = ["sui", "blockchain", "cryptocurrency", "wallet", "transactions"]
edition = "2021"
homepage = "https://www.cregis.com"
license = "MIT/Apache-2.0"
repository = "https://github.com/0xcregis/anychain-sui"

[dependencies]
anychain-core = { version = "0.1.8" }
hex = "0.4.3"
sui-sdk-types = { version = "0.3.1", features = ["serde", "hash"] }
bs58 = "0.5.1"
group = "0.13.0"
ed25519-dalek = { version = "2", features = ["hazmat"] }
curve25519-dalek = { version = "4.1.3", features = ["group"] }
#bcs = "0.1.6"
#base64 = "0.22.1"
#bech32 = "0.9.0"

[dev-dependencies]
anyhow = { version = "1" }
sui-crypto = { version = "0.3.0", features = ["ed25519"] }
serde_json = "1.0.145"
base64ct = { version = "1.8.0", features = ["alloc"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
