[package]
name = "anychain-sui"
description = "A Rust library for Sui-focused cryptocurrency wallets, enabling seamless transactions on the Sui blockchain"
version = "0.1.8"
keywords = ["sui", "blockchain", "cryptocurrency", "wallet", "transactions"]
edition = "2021"
homepage = "https://www.cregis.com"
license = "MIT/Apache-2.0"
repository = "https://github.com/0xcregis/anychain-sui"

[dependencies]
anychain-core = { version = "0.1.8" }
bcs = "0.1.6"
hex = "0.4.3"
sui-sdk-types = { version = "0.3.1", features = ["serde", "hash"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
group = "0.13.0"
ed25519-dalek = { version = "2", features = ["hazmat"] }
curve25519-dalek = { version = "4.1.3", features = ["group"] }
base64ct = { version = "1.8.0", features = ["alloc"] }
serde_json = "1.0"

[dev-dependencies]
anyhow = { version = "1" }
bech32 = { version = "0.11", default-features = false, features = ["alloc"] }
bs58 = "0.5.1"
rand = "0.8.6"
sui-crypto = { version = "0.3.0", features = ["ed25519", "passkey", "pem"] }
sui-rpc = { version = "0.3.1" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }